# robotframework-browserstack

./: .gitignore  BrowserstackLibrary.html  README.md  README.rst  base.resource  pyproject.toml  teste.robot
BrowserstackLibrary/: __init__.py  version.py
BrowserstackLibrary/docs/: README.md
BrowserstackLibrary/keywords/: __init__.py  _updatetestcase.py  _uploadapplication.py
BrowserstackLibrary/utils/: __init__.py  _browserstackClient.py
docs/: BrowserstackLibrary.html
