[tool.poetry]
name = "robotframework-browserstack"
version = "0.1.0"
description = ""
authors = ["Robot Courses <git@robotcourses.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
robotframework = "^7.0.1"
robotframework-appiumlibrary = "^2.0.0"
appium-python-client = "^3.2.1"
docutils = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
